@@ -16,6 +16,7 @@ S3method(changeunits,corpus)
 S3method(collocations,character)
 S3method(collocations,corpus)
 S3method(collocations,tokenizedTexts)
+S3method(compress,dfm)
 S3method(convert,dfm)
 S3method(corpus,VCorpus)
 S3method(corpus,character)
@@ -125,6 +126,7 @@ export(as.dfm)
 export(as.wfm)
 export(changeunits)
 export(collocations)
+export(compress)
 export(convert)
 export(corpus)
 export(describeTexts)
